<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/login_top"></include>


    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/middle_high"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_middle"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_user_name"
        android:padding="@dimen/padding"
        android:textColorHint="@color/login_hint"/>

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/middle_high"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_middle"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_password_login"
        android:padding="@dimen/padding"
        android:textColorHint="@color/login_hint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_middle">

        <TextView
            android:id="@+id/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/text_middle"/>

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/text_middle"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_middle_high"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_middle"
        android:background="@drawable/btn_red_radius"
        android:text="@string/login"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_middle"/>
</LinearLayout>